--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"postinstall": "npm run build",
 		"build": "npm run build:client && npm run build:server",
 		"build:client": "vite build",
 		"build:server": "vite build --config ./vite.server.config.ts",
@@ -19,12 +20,19 @@
 		"vite": "^7.1.2"
 	},
 	"dependencies": {
+		"@effect/opentelemetry": "^0.56.4",
 		"@effect/platform": "^0.90.5",
 		"@effect/platform-node": "^0.96.0",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+		"@opentelemetry/sdk-metrics": "^2.0.1",
+		"@opentelemetry/sdk-trace-base": "^2.0.1",
+		"@opentelemetry/sdk-trace-node": "^2.0.1",
+		"@opentelemetry/sdk-trace-web": "^2.0.1",
 		"@preact/signals": "^2.3.1",
-		"effect": "^3.17.8",
+		"effect": "^3.17.9",
 		"preact": "^10.27.1",
 		"preact-render-to-string": "^6.6.1",
-		"urlpattern-polyfill": "^10.1.0"
+		"urlpattern-polyfill": "^10.1.0",
+		"uuid": "^11.1.0"
 	}
 }
