--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "effect-vite-app",
+	"name": "effect-web-framework",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"postinstall": "npm run build",
