remove deprecated code, modularize route handling, simplify static assets handling, and standardize error classes (`Redirect` and `NotFound`).

--- a/biome.json
+++ b/biome.json
@@ -16,6 +16,10 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
+		},
+		"domains": {
+			"project": "recommended",
+			"react": "recommended"
 		}
 	},
 	"javascript": {
