get rid of path aliasing for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true,
-		"rootDir": "src",
-		"paths": {
-			"~/*": ["./src/*"]
-		}
+		"noUncheckedSideEffectImports": true
 	},
-	"include": ["src", "lib"]
+	"include": ["src"]
 }
